--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,9 +56,13 @@ jobs:
       - checkout
       - run: yum install tar gzip -y
       - run:
-          name: Ensure back-end infrastructure exists
+          name: Configure region
           command: |
-            aws cloudformation deploy \
+            aws configure
+      - run:
+          name: Ensure eks deployment is successful
+          command: |
+            aws --dry-run cloudformation deploy \
                --template-file .circleci/eks-create-template.yml \
                --tags project=eks_deploy \
                --stack-name "eks_deploy-${CIRCLE_WORKFLOW_ID:0:7}" \
