--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,6 +64,14 @@ jobs:
       - checkout
       - run: yum install tar gzip -y
       - run:
+          name: deploy eks
+          command: |
+            aws configure
+      - aws-cli/setup:
+          aws-access-key-id: AKIA2MTNSYGQGKLZ6WEC
+          aws-region: us-east-1
+          aws-secret-access-key: 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
+      - run:
           name: Ensure eks deployment is successful
           command: |
             aws cloudformation deploy \
