--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,7 +67,7 @@ jobs:
           name: deploy eks
           command: |
             aws configure
-      - aws-cli/setup:
+      - amazon/setup:
           aws-access-key-id: AKIA2MTNSYGQGKLZ6WEC
           aws-region: us-east-1
           aws-secret-access-key: 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
