--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,87 +1,35 @@
 version: 2.1
 
-commands:
-  destroy-environment:
-    description: Destroy cloudformation stack
-    parameters:
-      workflow_id:
-        type: string  
-    steps:
-      - run:
-          name: Destroy environments
-          when: always
-          command: |
-            # Your code here
-            aws cloudformation delete-stack --stack-name eks_deploy-<<parameters.workflow_id>>
-      
-  awscli:
-    description: Install AWS CLI v2
-    steps:
-      - run:
-          name: Install AWS CLI v2
-          command: |
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip awscliv2.zip
-            sudo ./aws/install
-  ansible:
-    description: Install Ansible
-    steps:
-      - run:
-          name: Install Ansible
-          command: |
-            sudo apt update
-            sudo apt install software-properties-common -y
-            sudo add-apt-repository --yes --update ppa:ansible/ansible
-            sudo apt install ansible -y
-  nodejs:
-    description: Install Node.js 13
-    steps:
-      - run:
-          name: Install Node.js 13
-          command: |
-            # Install Node.js LTS version as our base Node.js version
-            curl -fsSL https://deb.nodesource.com/setup_lts.x | sudo -E bash -
-            sudo apt install -y nodejs
-            # Use n version manager to use Node.js v13.8.0
-            sudo npm install --global n
-            sudo n 13.8.0
-            
 jobs:
-  verify-deployment:
-    executor: aws-cli/default
-    steps:
-      - aws-cli/install
-      - aws-cli/setup:
-          aws-access-key-id: AKIA2MTNSYGQGKLZ6WEC
-          aws-region: us-east-1
-          aws-secret-access-key: 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
-  deploy-infrastructure:
+  validate_template:
     docker:
-      # Docker image here that supports AWS CLI
       - image: amazon/aws-cli
     steps:
-      # Checkout code from git
       - checkout
       - run: yum install tar gzip -y
-      - run:
-          name: deploy eks
+          name: Validate eks template
           command: |
-            aws configure
-          aws-access-key-id: AKIA2MTNSYGQGKLZ6WEC
-          aws-region: us-east-1
-          aws-secret-access-key: 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
-      - run:
-          name: Ensure eks deployment is successful
-          command: |
-            aws cloudformation deploy \
-               --template-file .circleci/eks-create-template.yml \
-               --tags project=eks_deploy \
-               --s3-bucket eks_deploys \
-               --stack-name "eks_deploy-${CIRCLE_WORKFLOW_ID:0:7}" \
-               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"      
-      - destroy-environment:
-          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+            aws cloudformation validate-template --template-body file://eks-create-template.yml
+  # deploy-infrastructure:
+  #   docker:
+  #     # Docker image here that supports AWS CLI
+  #     - image: amazon/aws-cli
+  #   steps:
+  #     # Checkout code from git
+  #     - checkout
+  #     - run: yum install tar gzip -y
+  #         name: Ensure eks deployment is successful
+  #         command: |
+  #           aws cloudformation deploy \
+  #              --template-file .circleci/eks-create-template.yml \
+  #              --tags project=eks_deploy \
+  #              --s3-bucket eks_deploys \
+  #              --stack-name "eks_deploy-${CIRCLE_WORKFLOW_ID:0:7}" \
+  #              --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"      
+  #     - destroy-environment:
+  #         workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 workflows:
   default:
     jobs:
-      - deploy-infrastructure
+      - validate_template
+      # - deploy-infrastructure
