--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
     steps:
       - checkout
       - run: yum install tar gzip -y
+      - run:
           name: Validate eks template
           command: |
             aws cloudformation validate-template --template-body file://eks-create-template.yml
